# mattleaverton.github.io

./: .gitattributes  404.html  Makefile  README.md  archives.html  index.html  pelicanconf.py  publishconf.py  pyproject.toml  remove_original_images.py  tags.html
category/: projects.html  reading.html  writing.html
content/pages/: about.md
content/reading/: books-2023.md  books-2024.md
content/writing/: bookmarklet-font-size.md  career-update-glowforge.md  cloudflare-tunnel.md  corrupted-raspberry-pi-sd-card.md  django-admin-is-neat.md  docker-setup-on-vps.md  es-modules-in-vanilla-js.md  ethernet-only-raspberry-pi.md  fein-vacuum-adapter.md  first-published-article.md  fixing-a-dead-piano-key.md  fixing-gunicorn-hang.md  gal-conference-2023.md  git-lfs-initialization.md  handy-docker-tooling.md  intro.md  librechat.md  local-ipv6-router.md  meta-orion-announcement.md  on-learning.md  perusing-spotify-data.md  please-just-let-it-work.md  pocketbase.md  py-exe-debug-pt2.md  py-exe-debug.md  pycon-2025.md  pytexas-2023.md  pytexas-2024.md  (+5 more)
docs/: 404.html  CNAME  archives.html  index.html  tags.html
feeds/: all.atom.xml  projects.atom.xml  reading.atom.xml  writing.atom.xml
pages/: about.html
plugins/: copy_cname.py  link_target_blank.py
tag/: electronics.html  guitars.html  infra.html  luthier.html  music.html  opencv.html  python.html  software.html  sql.html  til.html  woodworking.html  work.html
tools/: books-to-markdown.py
util/: edit_article.sh  edit_article2.sh  editor.html  editor_server.py  list_articles.sh  new_article.py  new_article.sh
(+117 files in other folders)
