[project]
name = "mattleaverton-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cssmin>=0.2.0",
    "commonmark>=0.9.1",
    "markdown>=3.7",
    "pelican>=4.9.1",
    "pelican-avatar>=1.0.9",
    "pelican-image-process>=3.0.4",
    "pelican-webassets>=2.0.0",
    "webassets>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
